# django_mailings

./: .env.example  Readme.md  pyproject.toml
blog/: admin.py  models.py  views.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
blog/templatetags/: media_tags.py
config/: settings.py  urls.py
mailings/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
mailings/templates/mailings/: audience_list.html  base.html  client_form.html  client_list.html  index.html  mailing_form.html  mailing_list.html  mailinglog_list.html  mailings_base.html  message_form.html  message_list.html  periods_form.html  periods_list.html
mailings/templates/mailings/portal/: base.html  index.html  mailings_base.html  orders.html
static/css/: dashboard.css  sidebars.css
users/: models.py  permissions_mixins.py  services.py  urls.py  views.py
users/management/commands/: load_groups.py
users/templates/users/: login.html  register.html  user_list.html
